--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<h1>Our Recipe app is Working!</h1>
+
+<ul>
+  <li *ngFor="let recipe of recipes">{{ recipe.title }}</li>
+</ul>
