--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <h1>Our Recipe app is Working!</h1>
 
-<ul>
+<router-outlet></router-outlet>
+
+<!-- <ul>
   <li *ngFor="let recipe of recipes">{{ recipe.title }}</li>
-</ul>
+</ul> -->
