--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
 
 body { padding-top: 4.5rem; }
+
+/*label { font-weight: bold; }*/
+
+input[type=file].inputfile { 
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.inputfile + label {
+	max-width: 80%;
+    font-size: 1.25rem;
+    font-weight: 700;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
+    padding: 0.625rem 1.25rem;
+}
+
+.inline-block { display: inline-block; }
+.align-center { text-align: center !important; }
