changed tab color to app’s red

--- a/src/app/add-recipe/add-recipe.component.css
+++ b/src/app/add-recipe/add-recipe.component.css
@@ -59,7 +59,7 @@
 .tabs-container input:checked + label {
 	color: #555;
 	border: 1px solid #ddd;
-	border-top: 2px solid orange;
+	border-top: 2px solid #EB6864;
 	border-bottom: 1px solid #fff;
 }
 
