added placeholders to pasting text areas

--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -69,6 +69,7 @@
 	            	</div>
 	            </div>	
         	</section>
+        	<!-- Ingredients -->
             <section class="add-recipe-section tabs-container">
             	<h2>מצרכים</h2>
             	<div class="form-group">
@@ -106,7 +107,7 @@
 						<!-- add explanation -->
 						<div class="form-group">
 							<label>הדבק מצרכים</label>
-	            			<textarea class="form-control" rows="4"></textarea>
+	            			<textarea class="form-control" rows="4" placeholder="הדבק מצרכים, כל מצרך בשורה חדשה."></textarea>
 	            		</div>
             			<div class="align-center">
 	            			<button type="button" class="btn btn-outline-primary">הוסף מצרכים</button>
@@ -114,6 +115,7 @@
 					</section>
             	</div>
             </section>
+    		<!-- Directions -->
             <section class="add-recipe-section tabs-container">
             	<h2>שלבי הכנה</h2>
             	<div class="form-group">
@@ -138,7 +140,7 @@
 						<!-- add explanation -->
 						<div class="form-group">
 							<label>הדבק שלבים</label>
-	            			<textarea class="form-control" rows="4"></textarea>
+	            			<textarea class="form-control" rows="4" placeholder="הדבק שלבים, כל שלב בשורה חדשה."></textarea>
 	            		</div>
             			<div class="align-center">
 	            			<button type="button" class="btn btn-outline-primary">הוסף שלבים</button>
