--- a/src/app/select-units/select-units.component.html
+++ b/src/app/select-units/select-units.component.html
@@ -1,6 +1,6 @@
 <!-- need to set different ID? #ingredientUnit -->
 
-<select [(ngModel)]="selectedUnit" #ingredientUnit class="form-control" name="selectUnit">
+<select [(ngModel)]="selectedUnit" #ingredientUnit class="form-control" [class.added-ingredient-select]="selectedUnit" name="selectUnit">
 	<option value="" [attr.selected]="!selectedUnit ? true : null" disabled>בחר</option>
     <option *ngFor="let unit of units" value="{{ unit.id }}" [attr.selected]="selectedUnit == unit.id ? true : null">{{ unit.name }}</option>
 </select>
