--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -110,7 +110,7 @@
 	            			<button type="button" class="btn btn-outline-primary">הוסף מצרכים</button>
 	            		</div>
 					</section>
-					<app-added-ingredients [addedIngredients]="addedIngredients" [units]="units" (addedIngredientsChangedEvent)="addedIngredientsChanged($event)"></app-added-ingredients>
+					<app-added-ingredients [addedIngredients]="addedIngredients" [units]="units" (ingredientRemovedEvent)="ingredientRemoved($event)"></app-added-ingredients>
             	</div>
             </section>
     		<!-- Directions -->
