added ng2-dnd module for support for drag and drop  added support for drag and drop ingredients to reorder

--- a/src/app/added-ingredients/added-ingredients.component.html
+++ b/src/app/added-ingredients/added-ingredients.component.html
@@ -1,12 +1,13 @@
 <!-- if changing the ingredient from this view, update the added ingredients variable -->
 <!-- add drag and delete -->
 <section class="added-ingredients-container" *ngIf="addedIngredients">
-	<ul *ngFor="let addedIngredient of addedIngredients">
-		<li>
+	<ul dnd-sortable-container [sortableData]="addedIngredients">
+		<li *ngFor="let addedIngredient of addedIngredients; let i = index" dnd-sortable [sortableIndex]="i" [dragData]="addedIngredients" (onDropSuccess)="moveIngredient($event, i)">
 			<input type="text" class="form-control" name="addedIngredientName" value="{{ addedIngredient.name }}">
 			<input type="text" class="form-control" name="addedIngredientQty" value="{{ addedIngredient.quantity }}">
 			<app-select-units [units]="units" [selectedUnit]="addedIngredient.unit"></app-select-units>
-			<button (click)="removeIngredient(addedIngredient)">-</button>
+			<button class="handle" title="העבר"><i class="fas fa-bars"></i></button>
+			<button class="delete" title="מחק" (click)="removeIngredient(addedIngredient)"><i class="fas fa-minus"></i></button>
 		</li>
 	</ul>
 </section>
