--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -46,3 +46,8 @@ input[type=file].inputfile {
 
 .inline-block { display: inline-block; }
 .align-center { text-align: center !important; }
+
+// Application global styling ====================================================================== 
+.add-recipe-section { 
+	h2 { font-size: 20px; font-weight: bold; margin-bottom: 20px; }
+}
