--- a/src/app/added-ingredients/added-ingredients.component.html
+++ b/src/app/added-ingredients/added-ingredients.component.html
@@ -1,5 +1,4 @@
-<!-- if changing the ingredient from this view, update the added ingredients variable -->
-<!-- add drag and delete -->
+<!-- TODO: if changing the ingredient from this view, update the added ingredients variable -->
 <section class="added-ingredients-container" *ngIf="addedIngredients">
 	<h2>מצרכים שהוספו</h2>
 	<ul dnd-sortable-container [sortableData]="addedIngredients">
