--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,2 +1,9 @@
 
 @import "~bootstrap/scss/mixins";
+
+@mixin box-shadow($shadow) {
+  -webkit-box-shadow: $shadow;
+     -moz-box-shadow: $shadow;
+      -ms-box-shadow: $shadow;
+          box-shadow: $shadow;
+}
