fixed directions layout

--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -138,7 +138,7 @@
 					<input id="directions-tab2" type="radio" name="directions-tabs">
 					<label class="tab" for="directions-tab2">ע"י הדבקה</label>
 
-					<section id="directions-content1">
+					<section id="directions-content1" class="tab-content">
 		        		<div class="form-group">
 			                <label>שלב</label>
 			                <input type="text" class="form-control" placeholder="הוסף שלב">
@@ -149,7 +149,7 @@
 			           	</div>
 					</section>
 
-					<section id="directions-content2">
+					<section id="directions-content2" class="tab-content">
 						<!-- add explanation -->
 						<div class="form-group">
 							<label>הדבק שלבים</label>
