chnage all px styling to rem

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -49,7 +49,7 @@ input[type=file].inputfile {
 
 // Application global styling ====================================================================== 
 .add-recipe-section { 
-	h2 { font-size: 20px; font-weight: bold; margin-bottom: 20px; }
+	h2 { font-size: 1.25rem; font-weight: bold; margin-bottom: 1.25rem; }
 }
 
 .flex-input-button-container {
