--- a/src/app/add-recipe/add-recipe.component.scss
+++ b/src/app/add-recipe/add-recipe.component.scss
@@ -6,26 +6,26 @@
 .radios-container {
 	label { padding-right: 1.25rem; }
 
-	.form-check-label { margin-left: 15px; }
+	.form-check-label { margin-left: 0.9375rem; }
 }
 
 .add-recipe-section { 
-	padding-bottom: 15px; 
+	padding-bottom: 0.9375rem; 
 	border-bottom: 3px solid $border-color; 
-	margin-bottom: 15px; 
+	margin-bottom: 0.9375rem; 
 
-	h2 { font-size: 20px; font-weight: bold; margin-bottom: 20px; }
+	h2 { font-size: 1.25rem; font-weight: bold; margin-bottom: 1.25rem; }
 }
 
 #imagesUploadInput + label {
 	color: $red;
     background-color: #FFF;
     border: 2px solid $red;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     margin-bottom: 0;
 }
 
-#imagesUploadInput + label .fa-upload { margin-left: 10px; }
+#imagesUploadInput + label .fa-upload { margin-left: .625rem; }
 
 .new-ingredient-category select { width: 30%; margin-right: 1rem; }
 
@@ -33,10 +33,10 @@
 
 /*@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');*/
 
-.tabs-container{
+.tabs-container {
 	section.tab-content {
 		display: none;
-		padding: 20px 0 0;
+		padding: 1.25rem 0 0;
 		margin-bottom: 20px;
 		border-top: 1px solid $border-color;
 	}
@@ -48,7 +48,7 @@
 	label.tab {
 		display: inline-block;
 		margin: 0 0 -1px;
-		padding: 15px 25px;
+		padding: 0.9375rem 1.5625rem;
 		font-weight: 600;
 		text-align: center;
 		color: #bbb;
@@ -58,7 +58,7 @@
 	label:before {
 		font-family: fontawesome;
 		font-weight: normal;
-		margin-left: 10px;
+		margin-left: .625rem;
 	}
 
 	label:hover {
@@ -94,13 +94,13 @@
 
 		label:before {
 			margin: 0;
-			font-size: 18px;
+			font-size: 1.125em;
 		}
 	} 
 }
 
 @media screen and (max-width: 400px) {
 	.tabs-container label {
-		padding: 15px;
+		padding: 0.9375em;
 	}	
 }
